--- a/dmoj/nginx/conf.d/nginx.conf
+++ b/dmoj/nginx/conf.d/nginx.conf
@@ -41,6 +41,16 @@ server {
         root /pdf;
     }
 
+    location /mathoid {
+        default_type image/svg+xml;
+        alias /cache/mathoid;
+    }
+
+    location /texoid {
+        default_type image/svg+xml;
+        alias /cache/texoid;
+    }
+
     location /event/ {
         proxy_pass http://wsevent:15100/;
         proxy_http_version 1.1;
