--- a/dmoj/nginx/conf.d/nginx.conf
+++ b/dmoj/nginx/conf.d/nginx.conf
@@ -36,6 +36,10 @@ server {
         root /assets/;
     }
 
+    location /media {
+        alias /media/;
+    }
+
     location /pdf/pdfcache {
         internal;
         root /pdf;
