--- a/dmoj/nginx/conf.d/nginx.conf
+++ b/dmoj/nginx/conf.d/nginx.conf
@@ -28,6 +28,7 @@ server {
         uwsgi_read_timeout 600;
         uwsgi_pass site:8000;
         include uwsgi_params;
+        uwsgi_param SERVER_SOFTWARE nginx/$nginx_version;
     }
 
     location /static {
@@ -40,9 +41,9 @@ server {
         alias /media/;
     }
 
-    location /pdf/pdfcache {
+    location /pdfcache {
         internal;
-        root /pdf;
+        root /;
     }
 
     location /mathoid {
