Also test copying static files and migrating in Github Action

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
           ./scripts/initialize
           docker-compose up -d
+          COMPOSE_EXEC_FLAGS="-T" ./scripts/copy_static
+          COMPOSE_EXEC_FLAGS="-T" ./scripts/migrate
         working-directory: dmoj
       - name: Push images to Docker
         if: (github.event_name == 'push' || github.event_name == 'schedule') && github.ref == 'refs/heads/master'
