Install postcss for PostCSS 8.0 update

--- a/dmoj/base/Dockerfile
+++ b/dmoj/base/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
 
-RUN npm install -g sass postcss-cli autoprefixer
+RUN npm install -g sass postcss-cli postcss autoprefixer
 RUN pip3 install \
         pymysql mysqlclient websocket-client uwsgi django-redis redis
 
