--- a/dmoj/wsevent/Dockerfile
+++ b/dmoj/wsevent/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:alpine
 
+WORKDIR /app/
 RUN npm install qu ws simplesets
 
 EXPOSE 15100
 EXPOSE 15101
 EXPOSE 15102
 
-ENTRYPOINT node /site/websocket/daemon.js
+ENTRYPOINT node /app/site/websocket/daemon.js
