Switch to redis:alpine over redis:buster for smaller images

--- a/dmoj/docker-compose.yml
+++ b/dmoj/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     networks: [db]
   redis:
     container_name: dmoj_redis
-    image: redis:buster
+    image: redis:alpine
     restart: always
     networks: [site]
   texoid:
