nginx: don't log 404 errors when trying icon paths

--- a/dmoj/nginx/conf.d/nginx.conf
+++ b/dmoj/nginx/conf.d/nginx.conf
@@ -20,6 +20,7 @@ server {
 
     location @icons {
         root /assets/resources/icons/;
+        log_not_found off;
         error_page 403 = @uwsgi;
         error_page 404 = @uwsgi;
     }
