Remove redirecting stdout/stderr to file
Let Docker route the logs instead.

--- a/dmoj/bridged/Dockerfile
+++ b/dmoj/bridged/Dockerfile
@@ -3,5 +3,4 @@ FROM ninjaclasher/dmoj-base:latest
 EXPOSE 9999
 EXPOSE 9998
 
-ENTRYPOINT python3 manage.py runbridged \
-           >> /logs/bridge.stdout.log 2>> /logs/bridge.stderr.log
+ENTRYPOINT python3 manage.py runbridged
