--- a/dmoj/site/Dockerfile
+++ b/dmoj/site/Dockerfile
@@ -2,5 +2,4 @@ FROM ninjaclasher/dmoj-base:latest
 
 EXPOSE 8000
 
-ENTRYPOINT uwsgi --ini uwsgi.ini \
-           >> /logs/site.stdout.log 2>> /logs/site.stderr.log
+ENTRYPOINT uwsgi --ini uwsgi.ini
