--- a/dmoj/celery/Dockerfile
+++ b/dmoj/celery/Dockerfile
@@ -1,4 +1,3 @@
 FROM ninjaclasher/dmoj-base:latest
 
-ENTRYPOINT celery -A dmoj_celery worker -l info --concurrency=2 \
-           >> /logs/celery.stdout.log 2>> /logs/celery.stderr.log
+ENTRYPOINT celery -A dmoj_celery worker -l info --concurrency=2
