--- a/dmoj/base/Dockerfile
+++ b/dmoj/base/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.8-slim-buster
+FROM python:3.11-slim-bullseye
 
 RUN apt-get update && \
     apt-get install -y \
         git gcc g++ make curl gettext wget \
         libxml2-dev libxslt1-dev zlib1g-dev \
-        mariadb-client libmariadbclient-dev \
+        mariadb-client libmariadb-dev \
         libjpeg-dev debconf-utils && \
     curl -sL https://deb.nodesource.com/setup_16.x | bash - && \
     apt-get install -y nodejs && \
