--- a/dmoj/texoid/Dockerfile
+++ b/dmoj/texoid/Dockerfile
@@ -1,9 +1,8 @@
-FROM debian:buster-slim
+FROM debian:bullseye-slim
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        texlive-binaries texlive-generic-extra texlive-generic-recommended \
-        texlive-latex-base texlive-latex-extra texlive-latex-recommended \
+        texlive-binaries texlive-latex-base texlive-latex-extra texlive-latex-recommended \
         texlive-pictures texlive-pstricks librsvg2-bin xxd imagemagick python3-pip \
         python3-dev python3-wheel python3-setuptools git && \
     rm -rf /var/lib/apt/lists/*
