--- a/dmoj/texoid/Dockerfile
+++ b/dmoj/texoid/Dockerfile
@@ -1,10 +1,9 @@
-FROM debian:bullseye-slim
+FROM python:3.11-slim-bullseye
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         texlive-binaries texlive-latex-base texlive-latex-extra texlive-latex-recommended \
-        texlive-pictures texlive-pstricks librsvg2-bin xxd imagemagick python3-pip \
-        python3-dev python3-wheel python3-setuptools git && \
+        texlive-pictures texlive-pstricks librsvg2-bin xxd imagemagick git && \
     rm -rf /var/lib/apt/lists/*
 
 RUN git clone https://github.com/DMOJ/texoid/
