--- a/dmoj/pdfoid/Dockerfile
+++ b/dmoj/pdfoid/Dockerfile
@@ -1,11 +1,14 @@
 FROM python:3.11-slim-bullseye
 
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl gnupg git unzip xvfb libxi6 libgconf-2-4 exiftool && \
+    apt-get install -y --no-install-recommends \
+        curl gnupg git unzip xvfb libxi6 libgconf-2-4 exiftool && \
     curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add && \
     echo "deb [arch=amd64]  http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list && \
-    apt-get -y update && \
-    apt-get -y install google-chrome-stable && \
+    sed -r -i 's/^deb(.*)$/deb\1 contrib/g' /etc/apt/sources.list && \
+    apt-get update && \
+    apt-get install -y --no-install-recommends \
+        google-chrome-stable fonts-noto ttf-mscorefonts-installer && \
     rm -rf /var/lib/apt/lists/* && \
     wget https://chromedriver.storage.googleapis.com/$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)/chromedriver_linux64.zip && \
     unzip chromedriver_linux64.zip && \
