--- a/dmoj/texoid/Dockerfile
+++ b/dmoj/texoid/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.11-slim-bullseye
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         texlive-binaries texlive-latex-base texlive-latex-extra texlive-latex-recommended \
-        texlive-pictures texlive-pstricks librsvg2-bin xxd imagemagick git && \
+        texlive-pictures texlive-pstricks librsvg2-bin xxd imagemagick dvisvgm git && \
     rm -rf /var/lib/apt/lists/*
 
 RUN git clone https://github.com/DMOJ/texoid/
