Mount pdfcache in bridged and celery containers

--- a/dmoj/docker-compose.yml
+++ b/dmoj/docker-compose.yml
@@ -74,6 +74,7 @@ services:
     init: true
     restart: unless-stopped
     volumes:
+      - pdfcache:/pdfcache/
       - datacache:/datacache/
       - ./repo/:/site/
     working_dir: /site/
@@ -88,6 +89,7 @@ services:
     init: true
     restart: unless-stopped
     volumes:
+      - pdfcache:/pdfcache/
       - ./problems/:/problems/
       - ./repo/:/site/
     working_dir: /site/
