Update adding contrib to sources.list for bookworm

--- a/dmoj/pdfoid/Dockerfile
+++ b/dmoj/pdfoid/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && \
         curl gnupg git unzip xvfb libxi6 libgconf-2-4 exiftool && \
     curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add && \
     echo "deb [arch=amd64]  http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list && \
-    sed -r -i 's/^deb(.*)$/deb\1 contrib/g' /etc/apt/sources.list && \
+    sed -i 's/^Components: main$/& contrib non-free/' /etc/apt/sources.list.d/debian.sources && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
         google-chrome-stable fonts-noto ttf-mscorefonts-installer && \
